# COSMOS-React

./: .gitignore  .slugignore  Procfile  README.md  package.json  requirements.txt
.streamlit/: config.toml
api/: alembic.ini  requirements.txt
api/app/: __init__.py  dependencies.py  main.py
api/app/core/: auth.py  auth_service.py  config.py  csrf.py  db_middleware.py  sql_sanitizer.py
api/app/db/: session.py
api/app/email_templates/: invite_code_email.py
api/app/models/: __init__.py  auth.py  gmail.py  rag.py  user.py  youtube.py
api/app/routers/: __init__.py  admin.py  gmail.py  rag.py  users.py  youtube.py
api/app/schemas/: user.py
api/app/services/: cosmos_connector.py  email_service.py  user_service.py
api/app/utils/: error_handlers.py  input_validator.py  memory.py  timeout.py
api/app/workers/: cleanup.py
api/migrations/: env.py
api/migrations/versions/: a75e2c12f845_create_chat_message_history.py  add_terms_accepted_to_users.py  add_users_table.py  b392e1abf023_fix_missing_revision.py  initial_auth_tables.py  remove_max_redemptions.py
api/scripts/: create_invite.py  setup_auth.py
config/: nginx.conf.erb  prompts.py  settings.py
core/: chain.py  data_extraction.py  processing.py  vector_store.py
core/agents/: gmail_logic.py
core/cpp_modules/: __init__.py
cpp_extensions/: CMakeLists.txt  README.md  setup.py
cpp_extensions/hash_generation/: CMakeLists.txt  hash_generator.cpp
cpp_extensions/pdf_extraction/: CMakeLists.txt  pdf_extractor.cpp
cpp_extensions/text_chunking/: CMakeLists.txt  text_chunker.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  fonts.css  index.css  main.tsx
frontend/src/components/: feature-cards.tsx  floating-paper.tsx  footer.tsx  hero.tsx  navbar.tsx  sparkles.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/auth/: LoginForm.tsx  ProfileForm.tsx  RegisterForm.tsx
frontend/src/components/rag-chatbot/: ChatInterface.tsx  ContentUpload.tsx  LaTeXErrorBoundary.tsx  SettingsSidebar.tsx  UploadStatus.tsx
frontend/src/components/responsive/: index.js  index.tsx
frontend/src/components/ui/: calendar.tsx
frontend/src/components/youtube-processor/: InfoSection.tsx  SidebarSettings.tsx  VideoInputForm.tsx  VideoPreview.tsx
frontend/src/hooks/: useAuth.tsx  useCsrf.tsx  useDevice.js  useDevice.ts  useMediaQuery.js  useMediaQuery.ts  useRagChatbot.ts  useYouTubeProcessor.ts
frontend/src/pages/: AdminPanel.tsx  AuthPage.tsx  AuthScreen.tsx  GmailResponder.tsx  Home.tsx  RagChatbot.tsx  YouTubeProcessor.tsx
frontend/src/pages/auth/: LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/pages/landing-page/: AnimationOptimizer.ts  AnimationVariants.ts  CTA.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  MobileOptimizer.tsx  ResourcePreloader.tsx  index.tsx  mobileStyles.css  (+1 more)
frontend/src/store/: adminStore.ts
frontend/src/utils/: models.ts  youtube.ts
pages/: 3_Gmail_Agent.py
rag-chatbot/: page.tsx
rag-chatbot/components/: ChatHistory.tsx  ChatInput.tsx  ChatInterface.tsx  ContentUpload.tsx  ModelDetailsList.tsx  ModelSelector.tsx  SettingsSidebar.tsx  SliderControl.tsx  SourceFilterExpander.tsx  UploadStatus.tsx
rag-chatbot/types/: models.ts
rag-chatbot/utils/: models.ts
(+4 files in other folders)
